# jsf

./: .gitignore  pyproject.toml
jsf/: cli.py  parser.py
tests/: test_cli.py  test_default_fake.py  test_model_gen.py  test_nullable_types_gen.py  test_parser.py  test_utils.py
tests/data/: allof.json  custom_specification.json  external-ref.json
