[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
fail-under = 100
exclude = ["src/tests"]
ignore-regex = ["^test"]
verbose = 2
quiet = false
whitelist-regex = []
color = true
[tool.poetry]
name = "jsf"
version = "0.3.3"
description = "Creates fake JSON files from a JSON schema"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rstr = "^3.1.0"
Faker = "^13.3.1"
smart-open = "^5.2.1"
jsonschema = "^4.4.0"
typer = "^0.4.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
debugpy = "^1.5.1"

[tool.poetry.scripts]
jsf = "jsf.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
